--- a/styles/index.css
+++ b/styles/index.css
@@ -17,9 +17,9 @@
   display: flex;
   justify-content: space-between;
   height: 15px;
-  background-color: rgb(209, 209, 29);
+  background-color:#d4a522;
   border-radius: 10px;
-  box-shadow: 0 10px 30px rgb(151, 144, 37);
+  box-shadow: 0 10px 30px #555;
   margin: 10px;
   padding: 10px;
 }
@@ -29,7 +29,7 @@
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
-  font-variation-settings:"wdth" 100;
+  font-variation-settings: "wdth" 100;
   font-size: 1.4rem;
   padding-top: 10px;
   margin-top: 10px;
@@ -59,7 +59,7 @@ body {
 }
 
 .main-heading {
-  background-image: url(../images/backgroud-three.jpg),linear-gradient(#f5f4f4,#ebe1e1);
+  background-image: url(../images/backgroud-three.jpg), linear-gradient(#f5f4f4, #ebe1e1);
   background-size: cover;
   height: 400px;
   color: white;
@@ -104,7 +104,7 @@ body {
   white-space: nowrap;
   display: inline-flex;
   align-items: center;
-  background-image: linear-gradient(#fffb0b,#96841e);
+  background-image:, linear-gradient(#fffb0b, #96841e);
   color: white;
 
 }
@@ -117,7 +117,7 @@ body {
   padding-top: 10px;
   margin-left: 10px;
   padding-right: 10px;
-  line-height:22px;
+  line-height: 22px;
   text-align: left;
   display: block;
 }
@@ -169,7 +169,7 @@ body {
 }
 
 .section-three {
-  background-image: url(../images/background-four.jpg),linear-gradient(#ddc24a,#aa8319);
+  background-image: url(../images/background-four.jpg), linear-gradient(#ddc24a, #aa8319);
   background-size: contain;
   height: 200px;
 }
@@ -244,7 +244,7 @@ body {
 }
 
 .section-five {
-  background-image: linear-gradient(#dfdfdb,#ffffff);
+  background-image: linear-gradient(#dfdfdb, #ffffff);
   display: block;
 }
 
