--- a/styles/index.css
+++ b/styles/index.css
@@ -207,27 +207,15 @@ body {
   justify-content: space-between;
   margin: 5px;
   padding: 5px;
-  margin-right: 10px;
+  margin-right: 10.4px;
   margin-left: 10px;
   padding-left:  10px;
   padding-right: 10px;
 }
 
-.number-one {
-  color: #ddc24a;
-  font-size: 1rem;
-  font-weight: 900;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
-
+.number-one,
+.number-three,
 .number-two {
-  color: #ddc24a;
-  font-size: 1rem;
-  font-weight: 900;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
-
-.number-three {
   color: #ddc24a;
   font-size: 1rem;
   font-weight: 900;
@@ -236,7 +224,6 @@ body {
 
 /*.section-four {
   font-size: 0.7rem;*/
-}
 
 .section-five {
   background-image: linear-gradient(#dfdfdb, #fff);
@@ -246,7 +233,7 @@ body {
 .heading-three {
   font-size: 0.9rem;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 10.1px;
   padding-top: 10px; 
   margin-bottom: 5px;
   padding-bottom: 5px;
@@ -260,7 +247,7 @@ body {
 
 .botton-four {
   margin-top: 5px;
-  padding-top: 5px;
+  padding-top: 5.7px;
   text-align: center;
 }
 
@@ -271,7 +258,7 @@ body {
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 25.6px;
   padding-bottom: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
@@ -281,7 +268,7 @@ body {
 
 .three-animation img {
   margin-top: 10px;
-  padding-top: 5px;
+  padding-top: 5.6px;
   width: 70px;
 }
 
@@ -300,7 +287,7 @@ body {
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
-  box-shadow: 0 2px 4px #555;
+  box-shadow: 0.5 2px 4px #555;
   background-color: #d4a522;
   color: white;
 }
@@ -334,11 +321,11 @@ body {
 .branded img {
   margin-top: 10px;
   padding-top: 5px;
-  width: 70px;
+  width: 7.5px;
 }
 
 .heading-ani-two {
-  margin-top: 10px;
+  margin-top: 11px;
   padding-bottom: 10px;
 }
 
@@ -350,7 +337,7 @@ body {
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 25.5px;
   padding-bottom: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
@@ -360,7 +347,7 @@ body {
 
 .ads-video img {
   margin-top: 10px;
-  padding-top: 5px;
+  padding-top: 5.5px;
   width: 70px;
 }
 
@@ -387,12 +374,12 @@ body {
 
 .production img {
   margin-top: 10px;
-  padding-top: 5px;
+  padding-top: 6px;
   width: 70px;
 }
 
 .heading-ani-four {
-  margin-top: 10px;
+  margin-top: 10.5px;
   padding-bottom: 10px;
 }
 
@@ -403,7 +390,7 @@ body {
   background-color: white;
   justify-self: center;
   padding-top: 5px;
-  margin-top: 25px;
+  margin-top: 25.5px;
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
@@ -450,7 +437,7 @@ body {
 .consultation {
   display: block;
   text-align: center;
-  height: 200px;
+  height: 201px;
   width: 220px;
   justify-self: center;
   padding-top: 5px;
@@ -497,13 +484,13 @@ body {
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
-  box-shadow: 0 2px 4px #555;
+  box-shadow: 0 2.5px 4px #555;
   background-color: #d4a522;
   color: white;
 }
 
 .package img {
-  margin-top: 10px;
+  margin-top: 10.5px;
   padding-top: 5px;
   width: 70px;
 }
@@ -512,7 +499,7 @@ body {
   display: block;
   text-align: center;
   height: 200px;
-  width: 220px;
+  width: 221px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -548,7 +535,7 @@ body {
 
 .file img {
   margin-top: 10px;
-  padding-top: 5px;
+  padding-top: 6px;
   width: 70px;
 }
 
@@ -560,7 +547,7 @@ body {
   color: white;
 }
 
-.makeWorld-heading {
+.makeworld-heading {
   padding-top: 50px;
   margin-top: 50px;
   font-size: 1rem;
@@ -575,7 +562,9 @@ body {
   padding: 5px;
 }
 
-.customer {
+.customer,
+.ticket,
+.article {
   display: block;
   text-align: center;
   height: 200px;
@@ -591,51 +580,9 @@ body {
   color: white;
 }
 
+.ticket img,
+.article img,
 .customer img {
-  margin-top: 10px;
-  padding-top: 5px;
-  width: 70px;
-}
-
-.ticket {
-  display: block;
-  text-align: center;
-  height: 200px;
-  width: 220px;
-  justify-self: center;
-  padding-top: 5px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  padding-bottom: 5px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px #555;
-  background-color: #d4a522;
-  color: white;
-}
-
-.ticket img {
-  margin-top: 10px;
-  padding-top: 5px;
-  width: 70px;
-}
-
-.article{
-  display: block;
-  text-align: center;
-  height: 200px;
-  width: 220px;
-  justify-self: center;
-  padding-top: 5px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  padding-bottom: 5px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px #555;
-  background-color: #d4a522;
-  color: white;
-}
-
-.article img {
   margin-top: 10px;
   padding-top: 5px;
   width: 70px;
@@ -673,7 +620,8 @@ body {
   color: #d4a522;
 }
 
-.say-one {
+.say-one, 
+.say-two  {
   margin-left: 5px;
   padding-left: 5px;
   margin-top: 10px;
@@ -681,32 +629,7 @@ body {
   display: block;
 }
 
-.say-two {
-  margin-left: 5px;
-  padding-left: 5px;
-  margin-top: 10px;
-  padding-top: 10px;
-  display: block;
-}
-
-.profile-one {
-  display: flex;
-  gap: 1.5rem;
-  margin-top: 10px;
-  padding-top: 10px;
-}
-
-.profile-one img {
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-}
-
-.profile-id {
-  margin-top: 5px;
-  padding-top: 5px;
-}
-
+.profile-one,
 .profile-two {
   display: flex;
   gap: 1.5rem;
@@ -714,13 +637,15 @@ body {
   padding-top: 10px;
 }
 
-.profile-two img {
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-}
-
+.profile-id,
 .profile-id-two {
   margin-top: 5px;
   padding-top: 5px;
+}
+
+.profile-two img,
+.profile-one img{
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
 }
