--- a/styles/index.css
+++ b/styles/index.css
@@ -98,6 +98,7 @@ body {
   cursor: pointer;
   height: 10px;
   border: none;
+
   /* display: inline-block; */
   padding: 20px;
   box-sizing: border-box;
@@ -145,7 +146,7 @@ body {
   padding-right: 5px;
   margin-right: 5px;
   padding-bottom: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 10px;    
 }
 
 .section-two {
@@ -174,7 +175,7 @@ body {
 
 .heading-two {
   margin-top: 40px;
-  padding-top: 40px; 
+  padding-top: 40px;
   margin-left: 5px;
   padding-left: 5px;
   margin-right: 5px;
@@ -186,7 +187,7 @@ body {
   justify-content: center;
   font-size: 1rem;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .pharagraph-four {
@@ -207,14 +208,19 @@ body {
   justify-content: space-between;
   margin: 5px;
   padding: 5px;
-  margin-right: 10.4px;
+  margin-right: 10px;
   margin-left: 10px;
   padding-left:  10px;
   padding-right: 10px;
 }
 
-.number-one,
-.number-three,
+.number-one {
+  color: #ddc24a;
+  font-size: 1rem;
+  font-weight: 900;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
 .number-two {
   color: #ddc24a;
   font-size: 1rem;
@@ -222,18 +228,26 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-/*.section-four {
-  font-size: 0.7rem;*/
+.number-three {
+  color: #ddc24a;
+  font-size: 1rem;
+  font-weight: 900;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.section-four {
+  font-size: 0.7rem;
+}
 
 .section-five {
-  background-image: linear-gradient(#dfdfdb, #fff);
+  background-image: linear-gradient(#dfdfdb, #ffffff);
   display: block;
 }
 
 .heading-three {
   font-size: 0.9rem;
   text-align: center;
-  margin-top: 10.1px;
+  margin-top: 10px;
   padding-top: 10px; 
   margin-bottom: 5px;
   padding-bottom: 5px;
@@ -247,7 +261,7 @@ body {
 
 .botton-four {
   margin-top: 5px;
-  padding-top: 5.7px;
+  padding-top: 5px;
   text-align: center;
 }
 
@@ -258,7 +272,7 @@ body {
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
-  margin-bottom: 25.6px;
+  margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
@@ -268,7 +282,7 @@ body {
 
 .three-animation img {
   margin-top: 10px;
-  padding-top: 5.6px;
+  padding-top: 5px;
   width: 70px;
 }
 
@@ -287,7 +301,7 @@ body {
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
-  box-shadow: 0.5 2px 4px #555;
+  box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
   color: white;
 }
@@ -315,52 +329,52 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .branded img {
   margin-top: 10px;
   padding-top: 5px;
-  width: 7.5px;
+  width: 70px; 
 }
 
 .heading-ani-two {
-  margin-top: 11px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  padding-bottom: 10px; 
 }
 
 .ads-video {
   text-align: center;
   height: 200px;
   width: 220px;
-  background-color: white;
+  /*background-color: white;*/
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
-  margin-bottom: 25.5px;
+  margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .ads-video img {
   margin-top: 10px;
-  padding-top: 5.5px;
-  width: 70px;
+  padding-top: 5px;
+  width: 70px; 
 }
 
 .heading-ani-three {
   margin-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 10px; 
 }
 
 .production {
   text-align: center;
   height: 200px;
   width: 220px;
-  background-color: white;
+  /*background-color: white;*/
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -369,45 +383,45 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .production img {
   margin-top: 10px;
-  padding-top: 6px;
-  width: 70px;
+  padding-top: 5px;
+  width: 70px; 
 }
 
 .heading-ani-four {
-  margin-top: 10.5px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  padding-bottom: 10px; 
 }
 
 .movies {
   text-align: center;
   height: 200px;
   width: 220px;
-  background-color: white;
+  /*background-color: white;*/
   justify-self: center;
   padding-top: 5px;
-  margin-top: 25.5px;
+  margin-top: 25px;
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .movies img {
   margin-top: 10px;
   padding-top: 5px;
-  width: 70px;
+  width: 70px; 
 }
 
 .heading-ani-five {
   margin-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 10px; 
 }
 
 .you-will {
@@ -431,13 +445,13 @@ body {
 }
 
 .easysteps-boxes {
-   display: block;
+  display: block;
 }
 
 .consultation {
   display: block;
   text-align: center;
-  height: 201px;
+  height: 200px;
   width: 220px;
   justify-self: center;
   padding-top: 5px;
@@ -447,13 +461,13 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
-.consultation img{
+.consultation img {
   margin-top: 10px;
   padding-top: 5px;
-  width: 70px;
+  width: 70px; 
 }
 
 .easy-step-header {
@@ -484,22 +498,22 @@ body {
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
-  box-shadow: 0 2.5px 4px #555;
+  box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .package img {
-  margin-top: 10.5px;
+  margin-top: 10px;
   padding-top: 5px;
-  width: 70px;
+  width: 70px; 
 }
 
 .productions {
   display: block;
   text-align: center;
   height: 200px;
-  width: 221px;
+  width: 220px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -508,13 +522,13 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .productions img {
   margin-top: 10px;
   padding-top: 5px;
-  width: 70px;
+  width: 70px; 
 }
 
 .file {
@@ -530,13 +544,13 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
 .file img {
   margin-top: 10px;
-  padding-top: 6px;
-  width: 70px;
+  padding-top: 5px;
+  width: 70px; 
 }
 
 .make-world {
@@ -547,14 +561,14 @@ body {
   color: white;
 }
 
-.makeworld-heading {
+.makeWorld-heading {
   padding-top: 50px;
   margin-top: 50px;
   font-size: 1rem;
   padding-left: 5px;
   margin-left: 5px;
   padding-right: 5px;
-  margin-right: 5px;
+  margin-right: 5px; 
 }
 
 .make-world p {
@@ -562,8 +576,50 @@ body {
   padding: 5px;
 }
 
-.customer,
-.ticket,
+.customer {
+  display: block;
+  text-align: center;
+  height: 200px;
+  width: 220px;
+  justify-self: center;
+  padding-top: 5px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding-bottom: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px #555;
+  background-color: #d4a522;
+  color: white; 
+}
+
+.customer img {
+  margin-top: 10px;
+  padding-top: 5px;
+  width: 70px; 
+}
+
+.ticket {
+  display: block;
+  text-align: center;
+  height: 200px;
+  width: 220px;
+  justify-self: center;
+  padding-top: 5px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding-bottom: 5px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px #555;
+  background-color: #d4a522;
+  color: white; 
+}
+
+.ticket img {
+  margin-top: 10px;
+  padding-top: 5px;
+  width: 70px;
+}
+
 .article {
   display: block;
   text-align: center;
@@ -577,15 +633,13 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 4px #555;
   background-color: #d4a522;
-  color: white;
+  color: white; 
 }
 
-.ticket img,
-.article img,
-.customer img {
+.article img {
   margin-top: 10px;
   padding-top: 5px;
-  width: 70px;
+  width: 70px; 
 }
 
 .image-six img {
@@ -620,16 +674,40 @@ body {
   color: #d4a522;
 }
 
-.say-one, 
-.say-two  {
+.say-one {
   margin-left: 5px;
   padding-left: 5px;
   margin-top: 10px;
   padding-top: 10px;
-  display: block;
+  display: block;  
 }
 
-.profile-one,
+.say-two {
+  margin-left: 5px;
+  padding-left: 5px;
+  margin-top: 10px;
+  padding-top: 10px;
+  display: block; 
+}
+
+.profile-one {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+
+.profile-one img {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.profile-id {
+  margin-top: 5px;
+  padding-top: 5px;
+}
+
 .profile-two {
   display: flex;
   gap: 1.5rem;
@@ -637,15 +715,13 @@ body {
   padding-top: 10px;
 }
 
-.profile-id,
-.profile-id-two {
-  margin-top: 5px;
-  padding-top: 5px;
-}
-
-.profile-two img,
-.profile-one img{
+.profile-two img {
   border-radius: 50%;
   height: 50px;
   width: 50px;
+}
+
+.profile-id-two {
+  margin-top: 5px;
+  padding-top: 5px;
 }
