--- a/styles/index.css
+++ b/styles/index.css
@@ -466,7 +466,7 @@ body {
   margin-bottom: 25px;
   padding-bottom: 5px;
   border-radius: 5px;
-  box-shadow: 0 3px 4px #474747
+  box-shadow: 0 3px 4px #474747;
   background-color: #d4a522;
   color: white;
 }
