--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .logo-head,
@@ -15,7 +16,17 @@
   height: 60px;
 }
 
+.icon-head {
+  display: flex;
+  justify-content: space-between;
+}
+
 .icons {
+  margin: 10px;
+  padding: 10px;
+}
+
+/*.icons {
   display: flex;
   justify-content: space-between;
   height: 15px;
@@ -24,7 +35,7 @@
   box-shadow: 0 10px 30px #555;
   margin: 10px;
   padding: 15px;
-}
+}*/
 
 .animakit,
 .logo-name {
@@ -40,7 +51,7 @@
 
 nav {
   padding: 10px;
-  display: flex;
+  display: none;
   gap: 1rem;
   text-decoration: none;
   align-items: center;
@@ -58,14 +69,18 @@ a :hover {
 }
 
 body {
-  font-size: 0.7rem;
+  font-size: 0.9rem;
+  background-color: #d3d1d1;
+  line-height: 24px;
 }
 
 .main-heading {
-  background-image: url("../images/backgroud-three.jpg"), linear-gradient(#f5f4f4, #ebe1e1);
+  background-image: url("../images/backgroud-three.jpg"), linear-gradient(#615c5c, #9b9797);
   background-size: cover;
   height: 500px;
   color: white;
+  opacity: 0.2rem;
+  
 }
 
 .body-one {
@@ -167,6 +182,7 @@ body {
   background-image: url("../images/background-four.jpg"), linear-gradient(#ddc24a, #aa8319);
   background-size: contain;
   height: 300px;
+  opacity: 0.4px;
 }
 
 .heading-two {
@@ -177,6 +193,7 @@ body {
   margin-right: 5px;
   padding-right: 5px;
   color: white;
+  line-height: 28px;
 }
 
 .pharagraph-four {
@@ -220,7 +237,7 @@ body {
 }
 
 .section-five {
-  background-image: linear-gradient(#dfdfdb, #fff);
+  background-image: linear-gradient(#c9c9c4,#c2b8b8);
   display: block;
 }
 
@@ -257,8 +274,8 @@ body {
 
 .three-animation {
   text-align: center;
-  height: 250.1px;
-  width: 250px;
+  height: 300.1px;
+  width: 300px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -299,8 +316,8 @@ body {
 
 .two-animation {
   text-align: center;
-  height: 250px;
-  width: 250.3px;
+  height: 300px;
+  width: 300.3px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -325,8 +342,8 @@ body {
 
 .branded {
   text-align: center;
-  height: 250px;
-  width: 250.2px;
+  height: 300px;
+  width: 300.2px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -351,8 +368,8 @@ body {
 
 .ads-video {
   text-align: center;
-  height: 250.11px;
-  width: 250px;
+  height: 300.11px;
+  width: 300px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -377,8 +394,8 @@ body {
 
 .production {
   text-align: center;
-  height: 250px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -403,8 +420,8 @@ body {
 
 .movies {
   text-align: center;
-  height: 250.1px;
-  width: 250.11px;
+  height: 300.1px;
+  width: 300.11px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -455,8 +472,8 @@ body {
 .consultation {
   display: block;
   text-align: center;
-  height: 250px;
-  width: 250.12px;
+  height: 300px;
+  width: 300.12px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -482,8 +499,8 @@ body {
 .package {
   display: block;
   text-align: center;
-  height: 251px;
-  width: 250px;
+  height: 301px;
+  width: 300px;
   justify-self: center;
   padding-top: 6px;
   margin-top: 25px;
@@ -504,8 +521,8 @@ body {
 .productions {
   display: block;
   text-align: center;
-  height: 250px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 26px;
@@ -526,8 +543,8 @@ body {
 .file {
   display: block;
   text-align: center;
-  height: 250px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   justify-self: center;
   padding-top: 10px;
   margin-top: 25px;
@@ -581,8 +598,8 @@ body {
 .customer {
   display: block;
   text-align: center;
-  height: 250px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -603,8 +620,8 @@ body {
 .ticket {
   display: block;
   text-align: center;
-  height: 250px;
-  width: 250px;
+  height: 300px;
+  width: 300px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
@@ -625,8 +642,8 @@ body {
 .article {
   display: block;
   text-align: center;
-  height: 250.11px;
-  width: 250.22px;
+  height: 300.11px;
+  width: 300.22px;
   justify-self: center;
   padding-top: 5px;
   margin-top: 25px;
