--- a/styles/index.css
+++ b/styles/index.css
@@ -867,6 +867,7 @@ body {
   a {
     font-size: 1rem;
   }
+  
   .main-heading {
     height: 600px;
   }
@@ -923,12 +924,12 @@ body {
   }
 
   .button-two {
-    margin-left: 0px;
+    margin-left: 0.1px;
   }
 
   .image-one img {
-    margin: 40px;;
-    margin-top: 80px;;
+    margin: 40px;
+    margin-top: 80px;
     height: 400px;
     border-radius: 5px;
     margin-left: 40px;
@@ -947,7 +948,7 @@ body {
   .section-three {
     background-size: cover;
     height: 450px;
-    opacity: 0.5px
+    opacity: 0.5px;
   }
 
   .heading-two {
@@ -968,7 +969,7 @@ body {
   }
 
   .button-three {
-    margin-left: 0px;
+    margin-left: 1px;
   }
 
   .one {
@@ -997,7 +998,6 @@ body {
 
   .section-five {
     display: block;
-  
   }
 
   .heading-x {
@@ -1028,7 +1028,7 @@ body {
   }
 
   .button-four {
-    margin-left: 0px;
+    margin-left: 1px;
   }
 
   .anima-boxes {
@@ -1038,10 +1038,7 @@ body {
   }
 
   .three-animation {
-    width: 400px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    width: 400px
   }
 
   .two-animation {
@@ -1056,30 +1053,24 @@ body {
 
   .movies {
     width: 400px;
-    margin-top: 0px;
-    padding-top: 0px;
     margin-left: -50px;
     margin-top: -20px;
   }
 
   .ads-video {
     width: 400px;
-    margin-top: 0px;
-    padding-top: 0px;
     margin-top: -20px;
-  } 
+  }
 
   .production {
     width: 400px;
-    margin-top: 0px;
-    padding-top: 0px;
     margin-left: -25px;
     margin-top: -20px;
   }
 
   .you-will {
     display: grid;
-    grid-template-columns: 60% 40%; 
+    grid-template-columns: 60% 40%;
   }
 
   .icon-head {
@@ -1128,8 +1119,8 @@ body {
     margin-top: -400px;
     margin-left: -150px;
     display: block;
-  
   }
+
   .whatt {
     margin-top: 50px;
     height: 500px;
@@ -1166,19 +1157,15 @@ body {
     width: 340px;
     height: 300px;
     margin-bottom: 10px;
-    margin: 10px;
-    padding: 10px;
   }
 
   .package,
   .file {
     width: 340px;
     height: 300px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-right: 10px;
     padding-right: 10px;
-    margin: 10px;
-    padding: 10px;
     margin-left: -25px;
   }
 
@@ -1218,10 +1205,14 @@ body {
     font-size: 1rem;
     color: black;
     font-weight: 0;
-    width: 600px;
-    margin-left: 200px;
+    width: 850px;
     display: flex;
     gap: 1rem;
+    background-color: #f5f5e2;
+    margin-top: 50px;
+    height: 400px;
+    margin-left: -10px;
+    text-align: center;
   }
 
   .last-section {
@@ -1259,14 +1250,14 @@ body {
     margin-right: 60px;
   }
 
-  .says {
+  /*.says {
     background-color: #f5f5e2;
     margin-top: 50px;
     width: 850px;
     height: 400px;
     margin-left: -10px;
     text-align: center;
-  }
+  }*/
 
   .say-one,
   .say-two {
@@ -1345,4 +1336,4 @@ body {
   .terms {
     margin-top: -10px;
   }
-  }
+}
